Update and rename 2018-05-22-SPRING#2_1.md to 2018-05-22-SPRING#1_2.md

--- a/_posts/2018-05-22-SPRING#1_2.md
+++ b/_posts/2018-05-22-SPRING#1_2.md
@@ -35,11 +35,15 @@ tags:
 </ul>
 
 <h4>빈 주입</h4>
-<h5>.xml</h5>
-<img src="https://user-images.githubusercontent.com/38278723/40344202-b459fb3a-5dce-11e8-8e19-cd66dd92942f.PNG"/>
-<br><br>
-<h5>service</h5>
-<img src="https://user-images.githubusercontent.com/38278723/40344227-cf230a38-5dce-11e8-854c-18a3716b9299.PNG"/>
+<ul>
+  <li> <h5>.xml</h5>
+      <img src="https://user-images.githubusercontent.com/38278723/40344202-b459fb3a-5dce-11e8-8e19-cd66dd92942f.PNG"/>
+  </li>
+
+  <li><h5>service</h5>
+      <img src="https://user-images.githubusercontent.com/38278723/40344227-cf230a38-5dce-11e8-854c-18a3716b9299.PNG"/>
+  </li>
+</ul>
 
 
 
